actualizacion proyectos con los archivos DAO

--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,11 @@
         <maven.compiler.release>17</maven.compiler.release>
         <exec.mainClass>com.codeup.getion_alquiler_vehiculos.Getion_alquiler_vehiculos</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.0.33</version>
+   </dependency>
+    </dependencies>
 </project>
